Fix components' alignment

--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,8 @@ body {
 }
 
 .app-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  justify-content: center;
 }
 
 .quote-container {
